syntax = "proto3";
package protocol;

import "gate_model.proto";

message kick_out {
    int64 authID = 1;
    KickType kickType = 2;
}

//推送消息
message push_message {
    int64 authID = 1; //推送的authid -1 代表全服广播
    bytes data = 3;  //推送内容
    string service = 4; //服务名
}

//绑定服务 定向转发
message bind_service {
    int64 authID = 1;
    map<string, string> binds = 2;  //绑定的服务-绑定的服务节点名
}

message bind_service_ret {
    bool result = 1;
}
